--- a/secret recipe.htm
+++ b/secret recipe.htm
@@ -9,7 +9,7 @@
 <li>3/4 cup Brown sugar, packed</li>
 <li>2 Eggs, large</li>
 <li>2 teaspoons Vanilla</li>
-<li>2 1/4 cups Flour, unsifted</li>
+<li>2 1/4 cups Flour, unsifted</li>s
 <li>1 teaspoon Baking soda</li>
 <li>1/2 teaspoon Salt</li>
 <li>1 cup Walnuts or pecans, chopped (optional)</li>
@@ -17,7 +17,7 @@
 </ul>
 <h1>Baking instructions</h1>
 <ul>
-<li>Heat oven to 500ºF.</li>
+<li>Heat oven to 350ºF.</li>
 <li>Stir flour with baking soda and salt; set aside.</li>
 <li>In large mixing bowl, beat butter with sugar, and brown sugar at medium speed until creamy and lightened in color.</li>
 <li>Add eggs and vanilla, one at a time. Mix on low speed until incorporated.</li>
